--- a/symbol/index.html
+++ b/symbol/index.html
@@ -286,104 +286,71 @@
             </div>
         </section>
 
-        <!-- Modal-->
-        <section class="module bg-white">
+        <section class="bg-white" id="collapse-1">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-12 offset-lg-2">
-                        <div class="accordion" id="accordion1">
-                            <div class="accordion-item">
-                                <div class="accordion-item-header">
-                                    <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-1">APLY 이메일
-                                            서명양식</a></h6>
-                                </div>
-                                <div class="collapse show" id="collapse-1" data-parent="#accordion1">
-                                    <div class="accordion-item-body">
-                                        <p>
-                                        <div>
-                                            <form role="form" id="namecard">
-                                                <div class="row">
-                                                    <div class="col-lg-6">
-                                                        <div class="form-group">
-                                                            <div class="form-control" style="padding-bottom:.05rem;">
-                                                                <div class="row">
-                                                                    <div class="col-lg-6"><b>이름</b></div>
-                                                                    <input class="form-control" type="text"
-                                                                        name="form_name" id="form_name" value="이건우"
-                                                                        placeholder="한글 이름을 입력해 주세요." required="">
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="form-group">
-                                                            <div class="form-control" style="padding-bottom:.05rem;">
-                                                                <div class="row">
-                                                                    <div class="col-lg-6"><b>영문 이름</b></div>
-                                                                    <input class="form-control" type="text"
-                                                                        name="form_engname" id="form_engname"
-                                                                        value="Gunwoo Lee" placeholder="영문 이름을 입력해 주세요."
-                                                                        required="">
-                                                                </div>
-                                                            </div>
-                                                        </div>
-
-                                                        <div class="form-group">
-                                                            <div class="form-control" style="padding-bottom:.05rem;">
-                                                                <div class="row">
-                                                                    <div class="col-lg-6"><b>직위/직책</b></div>
-                                                                    <input class="form-control" type="text"
-                                                                        name="form_title" id="form_title"
-                                                                        value="CEO/CTO" placeholder="직위/직책을 입력해 주세요."
-                                                                        required="">
-                                                                </div>
-                                                            </div>
-                                                        </div>
-
-                                                        <div class="form-group">
-                                                            <div class="form-control" style="padding-bottom:.05rem;">
-                                                                <div class="row">
-                                                                    <div class="col-lg-6"><b>이메일</b> (abc@aply.biz)
-                                                                    </div>
-                                                                    <input class="form-control" type="text"
-                                                                        name="form_email" id="form_email"
-                                                                        value="abc@aply.biz" placeholder="이메일을 입력해 주세요."
-                                                                        required="">
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="form-group">
-                                                            <div class="form-control" style="padding-bottom:.05rem;">
-                                                                <div class="row">
-                                                                    <div class="col-lg-6"><b>전화번호</b> (+82-10-1234-1234)
-                                                                    </div>
-                                                                    <input class="form-control" type="text"
-                                                                        name="form_number" id="form_number"
-                                                                        value="+82-10-1234-5678"
-                                                                        placeholder="전화번호를 입력해 주세요." required="">
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-6" id="sign_field"></div>
-                                                </div>
-                                            </form>
-
+                    <div class="col-lg-12 offset-lg-2"><h6>APLY 이메일 서명양식</h6></div>
+                    <div class="col-lg-12 offset-lg-2">                                                                        
+                        <form role="form" id="namecard">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="row" style="margin-bottom:2px;">
+                                        <div class="col-lg-6"><b>이름</b>
+                                        <input class="form-control" type="text"
+                                            name="form_name" id="form_name" value="이건우"
+                                            placeholder="한글 이름을 입력해 주세요." required="">
                                         </div>
-                                        </p>
-                                        <p>
-                                            <div class="row">
-                                                <div class="col-md-12 text-center">
-                                                    <button class="btn btn-info btn-block" id="sign_copy_btn" data-clipboard-text="TEST">
-                                                       서명 복사하기
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </p>
-                                        
+                                    </div>                                    
+                                    <div class="row" style="margin-bottom:2px;">
+                                        <div class="col-lg-6"><b>영문 이름</b>
+                                        <input class="form-control" type="text"
+                                            name="form_engname" id="form_engname"
+                                            value="Gunwoo Lee" placeholder="영문 이름을 입력해 주세요."
+                                            required="">
+                                        </div>
+                                    </div>                                                                           
+                                    <div class="row" style="margin-bottom:2px;">
+                                        <div class="col-lg-6"><b>직위/직책</b>
+                                        <input class="form-control" type="text"
+                                            name="form_title" id="form_title"
+                                            value="CEO/CTO" placeholder="직위/직책을 입력해 주세요."
+                                            required="">
+                                        </div>
+                                    </div>
+                                    <div class="row" style="margin-bottom:2px;">
+                                        <div class="col-lg-6"><b>이메일</b> (abc@aply.biz)                                        
+                                        <input class="form-control" type="text"
+                                            name="form_email" id="form_email"
+                                            value="abc@aply.biz" placeholder="이메일을 입력해 주세요."
+                                            required="">
+                                        </div>
+                                    </div>
+                                    <div class="row" style="margin-bottom:2px;">
+                                        <div class="col-lg-6"><b>전화번호</b> (+82-10-1234-1234)
+                                        <input class="form-control" type="text"
+                                            name="form_number" id="form_number"
+                                            value="+82-10-1234-5678"
+                                            placeholder="전화번호를 입력해 주세요." required="">
+                                        </div>
+                                    </div>
+                                    <div class="row" style="margin-bottom:2px;">
+                                        <div class="col-lg-6"><b>AQR 고유 주소</b> (aq.gy/f/pRXa1)                                        
+                                        <input class="form-control" type="text"
+                                            name="form_aqr" id="form_aqr"
+                                            value="aq.gy/f/pRXa1"
+                                            placeholder="AQR 고유 주소를 입력해 주세요." required="">
+                                        </div>
                                     </div>
                                 </div>
+                                <div class="col-lg-6" id="sign_field"></div>
                             </div>
-                        </div>
+                        </form>
                     </div>
+                    <div class="col-md-12 text-center">
+                        <button class="btn btn-info btn-block" id="sign_copy_btn" data-clipboard-text="TEST">
+                            서명 복사하기
+                        </button>
+                    </div>                                                            
                 </div>
             </div>
         </section>
